[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/enemies/slime/EnemySlime.gd" type="Script" id=1]
[ext_resource path="res://characters/enemies/slime/slime_animation.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/health_bar/health_bar.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 12 )

[node name="EnemySlime" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 32
collision_mask = 67
script = ExtResource( 1 )

[node name="SlimeAnimation" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "moving"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="HealthBar" type="Control" parent="."]
margin_left = -8.0
margin_top = -20.0
margin_right = 24.0
margin_bottom = -12.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HealthBar"]
margin_left = 2.0
margin_top = 1.0
margin_right = 27.0
margin_bottom = 6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HealthBar"]
margin_left = 1.90735e-06
margin_right = 29.0
margin_bottom = 7.0
texture = ExtResource( 3 )
